Fixed cart dropdown visibility, refactored payment handler fuction

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 100;
+  height: 100vh;
+  min-width: 900px;
 }
 
 code {
